add second translator, profile German
Following an invite,[1] an acknowlegdement for a second translator
to German is added.

[1] https://github.com/cvfosammmm/Setzer/pull/355

Signed-off-by: Norwid Behrnd <nbehrnd@yahoo.com>

--- a/po/de.po
+++ b/po/de.po
@@ -225,7 +225,9 @@ msgstr "Setzer ist ein LaTeX-Editor."
 
 #: setzer/dialogs/about/about.py:51
 msgid "translator-credits"
-msgstr "Stephan Lachnit <stephanlachnit@protonmail.com>"
+msgstr ""
+msgstr "Stephan Lachnit <stephanlachnit@protonmail.com>\n"
+msgstr "Norwid Behrnd <nbehrnd@yahoo.com>"
 
 #: setzer/dialogs/add_remove_packages/add_remove_packages_viewgtk.py:51
 #: setzer/workspace/shortcutsbar/latex_shortcutsbar/latex_shortcutsbar_viewgtk.py:109
